...
                    }
                }
                .background(HomeScreenConstants.View.backgroundColor)
            }
        }.onAppear {
            viewModel.setup()
        }.accessibilityIdentifier("homescreen_view")
    }

    func calculateSize(_ geo: GeometryProxy) -> Sizes {
        let screenWidth = geo.size.width

        let totalScreenPadding = 2 * HomeScreenConstants.View.horizontalPadding
...
